tests/machine/x/pl/json_builtin.out
ERROR: /workspace/mochi/tests/machine/x/pl/json_builtin.pl:6:7: Syntax error: Operator expected

